--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 
 /sampling-min-max/dist
 /sampling-min-max/.cache
+sampling-2/dist/styles.164d45a1.css
+sampling-2/dist/styles.164d45a1.css.map
+sampling-2/dist/styles.164d45a1.js
+sampling-2/dist/styles.164d45a1.js.map
